<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#EF476F"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".EditMenu">

    <EditText
        android:id="@+id/menuItemName"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_margin="10dp"
        android:background="@drawable/login_edit_text"
        android:ems="10"
        android:hint="@string/name"
        android:textAlignment="center"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/menuItemPrice"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:background="@drawable/login_edit_text"
        android:layout_toRightOf="@id/menuItemName"
        android:layout_alignTop="@id/menuItemName"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/ButAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_alignTop="@id/menuItemPrice"
        android:background="@drawable/register_button"
        android:text="@string/add_item"
        android:textColor="@color/white"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/menuView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menuItemName"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"/>

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="25dp"
        android:layout_below="@id/menuItemPrice"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/ButRemoveItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ButDone"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/register_button"
        android:text="@string/remove_menu_item"
        android:textColor="@color/white"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/ButCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ButRemoveItem"
        android:background="@drawable/register_button"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:visibility="invisible" />

    <Button
        android:id="@+id/ButDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/register_button"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textAllCaps="false"
        />
</RelativeLayout>